Completed all pages

--- a/home.html
+++ b/home.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games</title>
+    <title>Jiayi's Page</title>
 </head>
 <body>
-    <link rel = "stylesheet" href="games.css">
+    <link rel = "stylesheet" href="home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
@@ -26,33 +26,19 @@
     <main>
         <div class="content">
             <div class="text">
-                <h1 id = "header"> Some Games I Play</h1>
-                <div class = "list">
-                    <ul>
-                    <li>Brawlhalla</li>
-                    <li>Cuphead</li>
-                    <li>Elden Ring</li>
-                    <li>Pokemon Scarlet</li>
-                    <li>Zenless Zone Zero</li>
-                    <li>Wuthering Waves</li>
-                    <li>Valorant</li>
-                    <li>Fortnite</li>
-                    <li>Wild Rift</li>
-                    <li>Stardew Valley</li>
-                    <li>Coral Island</li>
-                    <li>Slime Rancher 2</li>
-                    <li>The Witcher 3</li>
-                    </ul>
-                </div>
+                <h2 id="greeting">Hi, I'm...</h2>
+                <h1 id="eng-name">JIAYI <span id="chi-name">嘉义</span></h1>
+                <p>I'm an eighteen-year-old CS Student who's also into arts and design. I also don't know what the fuck I'm doing.</p>
+                <button class="butt">CLICK ME!</button>
             </div>
             <div class="image">
-                <img src="public/tinkatonart.png" alt="Tinkaton">
+                <img src="public/zzzportraitborder.png" alt="Avatar">
             </div>
         </div>
     </main>
     
     <footer>
         <h2 id="foot-logo">ZENLESS</h2>
-        <h2 id="number">02</h2>
+        <h2 id="number">01</h2>
     </footer>
 </body>
