--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
         <ul>
             <li id="logo"><img src="public/logo.png" id="logo" /></li>
             <div class="nav-links">
-                <li><a href="home.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="games.html">GAMES</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </div>
