--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2 id="greeting">Hi, I'm...</h2>
                 <h1 id="eng-name">JIAYI <span id="chi-name">嘉义</span></h1>
                 <p>I'm an eighteen-year-old CS Student who's also into arts and design. I also don't know what the fuck I'm doing.</p>
-                <button class="butt">CLICK ME!</button>
+                <button class="butt">PORTFOLIO!</button>
             </div>
             <div class="image">
                 <img src="public/zzzportraitborder.png" alt="Avatar">
