Added href to button to link to portfolio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <h2 id="greeting">Hi, I'm...</h2>
                 <h1 id="eng-name">JIAYI <span id="chi-name">嘉义</span></h1>
                 <p>I'm an eighteen-year-old CS Student who's also into arts and design. I also don't know what the fuck I'm doing.</p>
+                <a href="https://natetann.wixsite.com/natetanportfolio">
                 <button class="butt">PORTFOLIO!</button>
+                </a>
             </div>
             <div class="image">
                 <img src="public/zzzportraitborder.png" alt="Avatar">
